[project]
name = "min-py-mcp-auth"
version = "0.1.0"
description = "A minimal MCP server with OAuth authentication support"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
    "anyio>=4.5",
    "httpx>=0.27",
    "mcp",
    "pydantic>=2.0",
    "sse-starlette>=1.6.1",
    "uvicorn>=0.23.1; sys_platform != 'emscripten'",
]

[project.scripts]
mcp-auth-server = "min_py_mcp_auth.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/min_py_mcp_auth"]
